--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3B82F6" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Interactive Jobs-to-be-Done Journey Mapping Platform - Visualize and analyze your JTBD journey with dynamic filtering, team highlighting, and AI-powered insights."
     />
+    <meta name="keywords" content="JTBD, Jobs to be Done, Journey Mapping, Process Visualization, Team Collaboration, Interactive Diagrams" />
+    <meta name="author" content="Rev-Cloud-JTBD" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Rev-Cloud-JTBD - Interactive Journey Visualization Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
